--- a/catalog.html
+++ b/catalog.html
@@ -88,7 +88,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/aviator.png" width="240" height="240" alt="aviator">
+                <img src="img/aviator.jpg" width="240" height="240" alt="aviator">
                 <div class="price">
                   <b>Aviator</b>
                   <p class="aviator">Одностраничный макет с авторским дизайном</p>
@@ -99,7 +99,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/sqspc2-1.png" width="240" height="240" alt="sqspc">
+                <img src="img/sqspc2-1.jpg" width="240" height="240" alt="sqspc">
                 <div class="price">
                   <b>Sunset</b>
                   <p>Интернет-магазин с личным кабинетом</p>
@@ -110,7 +110,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/forte.png" width="240" height="240" alt="forte">
+                <img src="img/forte.jpg" width="240" height="240" alt="forte">
                 <div class="price">
                   <b>Forte</b>
                   <p>Отличный макет для личного блога</p>
@@ -121,7 +121,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/marque.png" width="240" height="240" alt="marque">
+                <img src="img/marque.jpg" width="240" height="240" alt="marque">
                 <div class="price">
                   <b>Modern organic tha!</b>
                   <p class="modern">Сайт для ресторана быстрого питания</p>
@@ -132,7 +132,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/avenue.png" width="240" height="240" alt="avenue">
+                <img src="img/avenue.jpg" width="240" height="240" alt="avenue">
                 <div class="price">
                   <b>Avenue</b>
                   <p>Макет для блога о путешествиях</p>
@@ -143,7 +143,7 @@
                 <div class="head">
                   <div class="circle"></div>
                 </div>
-                <img src="img/dovetail.png" width="240" height="240" alt="dovetail">
+                <img src="img/dovetail.jpg" width="240" height="240" alt="dovetail">
                 <div class="price">
                   <b>Dovetail</b>
                   <p>Интернет-магазин с галереей товаров</p>
