--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
           <div class="slides">
             <div class="slide">
               <div class="slide-text">
-                <h2>Долго, дорого,<br>скрупулезно.</h2>
-                <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+                <h2>Долго, дорого, скрупулезно.</h2>
+                <p>Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
                 <a class="btn btn-header btn-red" href="#">Узнать больше</a>
               </div>
             </div>
             <div class="slide">
               <div class="slide-text">
-                <h2>Любите ли вы математику,<br> как любим ее мы?</h2>
-                <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>за креатив, чтобы дать им возможность все просчитать.</p>
+                <h2>Любите ли вы математику, как любим ее мы?</h2>
+                <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать.</p>
                 <a class="btn btn-header btn-red" href="#">Узнать больше</a>
               </div>
             </div>
             <div class="slide">
               <div class="slide-text">
-                <h2>Только наркотики,<br> только хардкор!</h2>
+                <h2>Только наркотики, <br> только хардкор!</h2>
                 <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов.</p>
                 <a class="btn btn-header btn-red" href="#">Узнать больше</a>
               </div>
@@ -62,21 +62,21 @@
         <div class="offers ">
           <ul class="clearfix">
             <li class="left-column">
-              <img src="img/offers1.png" width="240" height="124" alt="web-site">
+              <img src="img/offers1.jpg" width="240" height="124" alt="web-site">
               <b>Веб-сайты</b>
-              <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="btn btn-mini btn-red" href="#">Заказать</a>
             </li>
             <li class="left-column">  
-              <img src="img/offers2.png" width="240" height="124" alt="apps">
+              <img src="img/offers2.jpg" width="240" height="124" alt="apps">
               <b>Приложения</b>
-              <p>Покорите топ-10 приложений<br> в AppStrore и Google Play</p>
+              <p>Покорите топ-10 приложений в AppStrore и Google Play</p>
               <a class="btn btn-mini btn-green" href="#">Заказать</a>
             </li>
             <li class="right-column">
-              <img src="img/offers3.png" width="240" height="124" alt="present">
+              <img src="img/offers3.jpg" width="240" height="124" alt="present">
               <b>Презентации</b>
-              <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="btn btn-mini btn-yellow" href="#">Заказать</a>
             </li>
           </ul>
@@ -106,13 +106,13 @@
         <div class="clients" id="clients">
           <ul>
             <li class="glukhanko">
-              <a href="#"><img src="img/glukhango.png" alt="glukango"></a>
+              <a href="#"><img src="img/glukhango.png" width="198" height="37" alt="glukango"></a>
             </li>
             <li class="htmlacademy">
-              <a href="#"><img src="img/htmlacademy.png" alt="htmlacademy"></a>
+              <a href="#"><img src="img/htmlacademy.png" width="199" height="68" alt="htmlacademy"></a>
             </li>
             <li class="barbershop">
-              <a href="#"><img src="img/barbershop.png" alt="barbershop"></a>
+              <a href="#"><img src="img/barbershop.png" width="209" height="86" alt="barbershop"></a>
             </li>
           </ul>
         </div>
