--- a/catalog.html
+++ b/catalog.html
@@ -162,6 +162,8 @@
       </div>
     </main>
     <div class="contact" id="contact">
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=VYB3j4h0PWc84AfuuAaAuuM9f7sqS9QG&amp;width=1200&amp;height=416&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true">
+	  	 </script>
         <div class="container clearfix">
           <div class="left-column write">
             <b>NЁRDS DESIGN STUDIO</b>
